FIXES more css overflow

--- a/UI/css/admin/dailymenu.css
+++ b/UI/css/admin/dailymenu.css
@@ -50,7 +50,6 @@ figcaption {
     .menu-list {
         display: flex;
         flex-direction: column;
-        margin-left: 20%
     }
     .menu-main {
         margin-bottom: 20px;
@@ -67,5 +66,13 @@ figcaption {
         display: flex;
         flex-direction: column;
         margin-left: 20%
+    }
+}
+@media only screen and (max-width: 800px) {
+    .menu-list {
+        display: flex;
+        justify-content: space-around;
+        margin-left: 25%;
+        margin-bottom: 5%;
     }
 }
