--- a/UI/css/customerdashboard.css
+++ b/UI/css/customerdashboard.css
@@ -74,8 +74,7 @@ table {
     border-collapse: collapse;
     font-family: arial, sans-serif;
     width: 100%;
-    margin-left: 5%;
-    
+    margin-left: 5%;  
 }
 td {
 	border: 1px solid #dddddd;
@@ -99,9 +98,9 @@ and (max-width: 500px) {
         border: none;
         color: white;
         cursor: pointer;
-        font-size: 1em;
+        font-size: 16px;
         height: 50px;
-        width: 130px;  
+        width: 100px;  
     }
     .btn-link{
         margin-left: 12%
@@ -114,9 +113,9 @@ and (max-width: 500px) {
     }
     .confirm-btn{
         cursor: pointer;
-        font-size: 1em;
+        font-size: 16px;
         height: 50px;
-        width: 130px;   
+        width: 100px;   
     }
     .main-head {
         font-size: 1.5em;
@@ -145,6 +144,18 @@ and (max-width: 500px) {
 
 @media only screen and (min-width: 600px)
 and (max-width: 768px) {
+    .back-btn{
+        background: rgb(0, 255, 234);
+        font-size: 16px;
+        height: 60px;
+        width: 110px;  
+    }
+    .confirm-btn{
+        cursor: pointer;
+        font-size: 16px;
+        height: 60px;
+        width: 110px;   
+    }
     .confbtn{
         margin-left:25%;
         margin-right: 5%;
@@ -164,6 +175,9 @@ and (max-width: 768px) {
     }
     .sub-head {
         margin-left: 35%;
+    }
+    table {
+        margin-left: 15%;  
     }
     
 }
